--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,36 @@ html {
     font-size: 2rem;
 }
 
+
+.unico{
+    border: 0;
+    background-image: linear-gradient(150deg, #9500ff, #09f, #00DDFF);
+    border-radius: 8px;
+    color: #fff;
+    font-size: 40px;
+    padding: 16px 24px; 
+    margin: 0 auto; 
+    cursor: pointer;
+    transition: 0.3s;
+    text-align: center;
+    max-width: 50%;
+    overflow: hidden;
+}
+
+.unico{
+    background-color: #111;
+    padding: 16px 24px;
+    border-radius: 6px;
+    transition: .3s;
+    border-radius: 10px 0px 10px 0px;
+}
+
+.unico:hover {
+    background: linear-gradient(150deg, #00DDFF, #9500ff, #09f);
+}
+
+
+
 .navbar {
     padding: 2rem;
     background-color: white;
