--- a/CSS/Funcionalidades.css
+++ b/CSS/Funcionalidades.css
@@ -1,22 +1,3 @@
-body{
-
-    min-height: 100vh;
-    overflow: hidden;
-    background-color: #313636;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-svg{
-    margin-bottom: 80px;
-}
-
-.btn{
-
-   cursor: pointer; 
-}
 
 /* Barra de navegacion */ 
 
@@ -56,7 +37,7 @@ font-weight: bold;
         display: none;
     }
 }
-
+/*cuepo*/
 body {
     display: flex;
     flex-direction: column;
@@ -69,6 +50,41 @@ body {
     height: 100%;
 }
 
+button {
+    background: black;
+    cursor: pointer;
+    border: none;
+    padding: 16px 32px;
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    position: relative;
+    border-radius: 24px;
+}
+button::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        45deg,
+        red,blue,deeppink,blue,
+        red,blue,deeppink,blue
+    );
+    background-size: 800%;
+    border-radius: 10px;
+    filter: blur(8px);
+    animation: glowing 20s linear infinite;
+}
+@keyframes glowing {
+    0% {
+        background-position:0 0;
+    }
+    
+}
 
 /*FOOTER*/
 
