--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,8 +82,14 @@ font-weight: bold;
 h1{
   font-size: 2.5rem;
   text-align: center;
-
 }
+
+@media screen and (max-width:480px) {
+    .t {
+        color: #9500ff;
+    }
+}
+
 
 .t {
     color: #fff;
