--- a/CSS/Contactanos.css
+++ b/CSS/Contactanos.css
@@ -1,113 +1,7 @@
-/* Barra de navegacion */ 
-
-.navbar {
-  padding: 2rem;
-  background-color: white;
-
-}
-
-.navbar-collapse{
-align-items: center;
-justify-content:space-between ;
-font-weight: bold;
-}
-
-.custom-text {
-font-family: Arial, Helvetica, sans-serif;
-font-weight: bold;
-font-size: 16px;
-color: rgb(0, 0, 0); 
-margin-left: 10px; 
-margin-bottom: 0; 
-}
-
-/* Estilos personalizados para los enlaces */
-.custom-link {
-font-family: Arial, Helvetica, sans-serif;
-color: #000000; 
-text-decoration: none; 
-}
-
-
-/*adaptable (responsivo)*/
-
-@media screen and (max-width:767px) {
-  .navbar-brand {
-      display: none;
-  }
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    background-color: rgb(255, 255, 255); 
- }
- 
- html {
-
-    height: 100%;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-
-*{
-    margin:0;
-    padding: 0;
-    box-sizing:border-box;
-}
-
-body{
-
-    font-family: 'Poppins',sans-serif;
-    background: burlywood;
-}
-
-.card{
-
-    width: 90%;
-    margin: 0 auto;
-    padding: 60px 0;
-    max-width: 1200px;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 3.5em;
-    flex-wrap: wrap;
-
-}
-
-.card_item{
-    background: #f2f2f2;
-    padding-bottom: 3em;
-    flex-basis: 280px;
-    max-width: 450px;
-    flex-grow: 1;
-}
-
-
-.card_content{
-    width: 90%;
-    margin: auto;
-
-}
-
-.card_picture{
-    width: 90%;
-    margin: 0 auto;
-    background: cornflowerblue;
-    position: relative;
-    bottom: 2em;
-}
-
-.card_img{
-    width: 100%;
-
-}
-
-.card_title{
-    margin-bottom: 1em;
+.navbar-nav.center {
+  margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -116,156 +10,110 @@ body{
 
 /*FOOTER*/
 
-footer{
 
-  margin-top: auto;
+h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight:300;
+  letter-spacing: 2px;
+  font-size:48px;
+}
+p {
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 1px;
+  font-size:14px;
+  color: #333333;
 }
 
-
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-*
-
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+.header1 {
+  position:relative;
+  text-align:center;
+  background-color: rgba(13,110,253,255);
+  color:white;
+}
+.logo {
+  width:50px;
+  fill:white;
+  padding-right:15px;
+  display:inline-block;
+  vertical-align: middle;
 }
 
-footer{
-
-    position: relative;
-    width: 100%;
-    background: #3586ff;
-    min-height: 100px;
-    padding: 20x 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-
+.inner-header {
+  height:25vh;
+  width:100%;
+  margin: 0;
+  padding: 0;
 }
 
-footer .social_icon,
-footer .menu {
-position: relative;
-display: flex;
-justify-content: center;
-align-items: center;
-margin: 10px 0;
-flex-wrap: wrap;
-
+.flex { /*Flexbox for containers*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-footer .social_icon li,
-footer .menu li {
-    list-style: none;
+.waves {
+  position:relative;
+  width: 100%;
+  height:15vh;
+  margin-bottom:-7px; /*Fix for safari gap*/
+  min-height:100px;
+  max-height:150px;
 }
 
-footer .social_icon li a
- {
-    font-size: 2em;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
+.content {
+  position:relative;
+  height:20vh;
+  text-align:center;
+  background-color: white;
 }
 
-footer .social_icon li a:hover{
-    transform: translateY(-10px);
+.conten p{
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  
 }
 
+/* Animation */
 
-footer .menu li a {
-    font-size: 1.2em;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    text-decoration: none;
-    opacity: 0.75;
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
 }
-footer .menu li a:hover{
-
-    opacity: 1;
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
 }
-
-footer p{
-    color: #fff;
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    font-size: 1.1em;
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
 }
-
-footer .wave {
-    
-   
-    position: absolute;
-        bottom: 0;
-        top: -100%; 
-       
-    left: 0;
-        width: 100%;
-        height: 100px;
-        background: url('../IMG/waves.png'); /* Replace 'waves.png' with the actual path to your wave image */
-        background-size: 1000px 100px;
-    }
-
-footer .wave#wave1{ 
-    z-index: 1000;
-    opacity: 1;
-    bottom: 0px;
-    animation: animateWave 4s linear infinite;
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
 }
-
-footer .wave#wave2{
-    z-index: 999;
-    opacity: 0.5;
-    bottom: 10px;
-    animation: animateWave_02 4s linear infinite;
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
 }
-
-footer .wave#wave3{
-    z-index: 1000;
-    opacity: 0.2;
-    bottom: 0px;
-    animation: animateWave_02 4s linear infinite;
-}
-
-footer .wave#wave4{
-    z-index: 999;
-    opacity: 0.7;
-    bottom: 10px;
-    animation: animateWave_02 4s linear infinite;
-}
-
-
-
-
-@keyframes animateWave{
-    0%
-    { 
-        background-position-x: 1000px;
-    }
-    100%
-    {
-        background-position-x: 50px;
-    }
-}
-
-@keyframes animateWave_02{
-    0%
-    {
-        background-position-x: 0px;
-    }
-    100%
-    {
-        background-position-x: 1000px;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    body {
-      background-color: lightblue;
-    }
+@keyframes move-forever {
+  0% {
+   transform: translate3d(-90px,0,0);
   }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height:40px;
+    min-height:40px;
+  }
+  .content {
+    height:30vh;
+  }
+  h1 {
+    font-size:24px;
+  }
+}
