--- a/CSS/Funcionalidades.css
+++ b/CSS/Funcionalidades.css
@@ -1,18 +1,205 @@
 
 /* Barra de navegacion */ 
 
-.navbar {
-    padding: 2rem;
-    background-color: white;
-    flex-direction: column;
+
+
+.container1_all{
+    position: relative;
+    right: 0;
+    transition: all 300ms;
+}
+
+.navbar-nav.center {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+  }
+  
+
+
+
+/*COVER*/
+
+.cover{
+    width: 100%;
+    padding-bottom: 120px;
+    font-family: 'Poppins', sans-serif;
+    padding-top: 100px;
+    position: relative;
+    overflow: hidden;
+}
+
+/*WAVE INICIO*/
+
+.bg_color{
+    width: 100%;
+    height: 70%;
+    background: #2196f3;
+    position: absolute;
+    top: 0;
+}
+
+.wave{
+    width: 6000px;
+    height: 100%;
+    position: absolute;
+    top: 150px;
+    left: 0;
+    background-image: url(../IMG/img\ Contactnos/wd1.svg);
+    background-position: bottom;
+}
+
+.w1{
+    animation: w1 7s linear infinite;
+}
+
+.w2{
+    animation: w2 7s linear -.125s infinite, desplazamiento 7s ease -.125s infinite;
+    opacity: 0.5;
+}
+
+@keyframes w1 {
+    0%{
+        margin-left: 0;
+    }
+    100%{
+        margin-left: -1600px;
+    }
+}
+
+@keyframes w2 {
+    0%{
+        margin-left: 0;
+    }
+    100%{
+        margin-left: -1600px;
+    }
+}
+
+@keyframes desplazamiento {
+    0%, 100%{
+        transform: translateY(-25px);
+    }
+
+    50%{
+        transform: translateY(10px);
+    }
+}
+  /*WAVE FINAL*/
+
+.container__cover{
+    max-width: 1200px;
+    margin: auto;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+
+    *background-image: url(../IMG/img\ Contactnos/background-cover.svg);
+
+    
+    background-size: cover;
+    background-position: bottom;
+}
+
+
+.cover .container__info{
+    max-width: 400px;
+    margin-top: 40px;
+    z-index: 2;
+}
+
+.cover h1{
+    max-width: 400px;
+    font-size: 60px;
+    font-weight: 900;
+    color: #fff;
+}
+
+.cover h2{
+    font-size: 60px;
+    font-weight: 900;
+    color: #FEBA0B;
+    margin-top: -30px;
+}
+
+.cover p{
+    margin-top: 10px;
+    color: #fff;
+}
+
+.cover input[type="button"]{
+    padding: 10px 40px;
+    margin-top: 40px;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+    color: white;
+    background: #FEBA0B;
+    border-radius: 20px;
+    box-shadow: 1px 1px 30px -5px #20202049;
+    cursor: pointer;
+    transition: box-shadow 500ms;
+}
+
+.cover input[type="button"]:hover{
+    box-shadow: 1px 1px 30px -5px #20202085;
+}
+
+.container__vector{
+    position: relative;
+}
+
+.container__vector img{
+    position: absolute;
+    bottom: 10px;
+    right: 0px;
+    width: 600px;
+    transition: all 300ms;
+    animation: move_vector 6s ease-in-out infinite;
+}
+
+@keyframes move_vector{
+    0%{
+        transform: translateY(10px);
+    }
+    25%{
+        transform: translateY(-10px);
+    }
+    100%{
+        transform: translateY(10px);
+    }
+}
+
+@media screen and (max-width: 920px){
+
+    .container__vector img{
+        width: 500px;
+    }
+}
+
+@media screen and (max-width: 760px){
+
+    
+
+    .btn__menu{
+        display: flex;
+    }
+
+    
+
+   
+
+    .container__vector img{
+        transform: scale(0);
+        animation: none;
+    }
 
 }
 
-.navbar-collapse{
-align-items: center;
-justify-content:space-between ;
-font-weight: bold;
-}
+
+
+
 
 .custom-text {
   font-family: Arial, Helvetica, sans-serif;
@@ -33,11 +220,6 @@ font-weight: bold;
 
 /*adaptable (responsivo)*/
 
-@media screen and (max-width:767px) {
-    .navbar-brand {
-        display: none;
-    }
-}
 /*cuepo*/
 body {
     min-height: 100%;
@@ -112,152 +294,171 @@ body {
 
 
 
+
+main{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.title{
+    text-align: center;
+    margin-top: 80px;
+}
+
+.main-menu {
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.main-menu a{
+    cursor: default;
+}
+
+.main-menu .option{
+    width: 200px;
+    height: 200px;
+    background: #f1f1f1;
+    margin: 20px;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 300ms;
+}
+
+.main-menu .option:hover{
+    box-shadow: 10px 10px 0px 0px #46A2FD, 20px 20px #83C1FD, 30px 30px 14px #ACD5FD;
+    transform: translate(-5px, -5px);
+}
+
+.option img{
+    width: 40%;
+    margin-top: 30px;
+}
+
+.option h2{
+    font-size: 18px;
+    margin-top: 10px;
+    color: #505050;
+}
+
+
+
+
 /*FOOTER*/
 
-footer{
+/*FOOTER*/
 
-    margin-top: auto;
+
+h1 {
+    font-family: 'Lato', sans-serif;
+    font-weight:300;
+    letter-spacing: 2px;
+    font-size:48px;
+  }
+  p {
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 1px;
+    font-size:14px;
+    color: #333333;
   }
   
-  
-  @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-  *
-  
-  {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
+  .header1 {
+    position:relative;
+    text-align:center;
+    background-color: rgba(13,110,253,255);
+    color:white;
+  }
+  .logo {
+    width:50px;
+    fill:white;
+    padding-right:15px;
+    display:inline-block;
+    vertical-align: middle;
   }
   
-  footer{
-  
-      position: relative;
-      width: 100%;
-      background: #3586ff;
-      min-height: 100px;
-      padding: 20x 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: row;
-  
+  .inner-header {
+    height:25vh;
+    width:100%;
+    margin: 0;
+    padding: 0;
   }
   
-  footer .social_icon,
-  footer .menu {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-  flex-wrap: wrap;
-  
+  .flex { /*Flexbox for containers*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
   
-  footer .social_icon li,
-  footer .menu li {
-      list-style: none;
+  .waves {
+    position:relative;
+    width: 100%;
+    height:15vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
   }
   
-  footer .social_icon li a
-   {
-      font-size: 2em;
-      color: #fff;
-      margin: 0 10px;
-      display: inline-block;
-      transition: 0.5s;
+  .content {
+    position:relative;
+    height:20vh;
+    text-align:center;
+    background-color: white;
   }
   
-  footer .social_icon li a:hover{
-      transform: translateY(-10px);
+  .conten p{
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    
   }
   
+  /* Animation */
   
-  footer .menu li a {
-      font-size: 1.2em;
-      color: #fff;
-      margin: 0 10px;
-      display: inline-block;
-      text-decoration: none;
-      opacity: 0.75;
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
   }
-  footer .menu li a:hover{
-  
-      opacity: 1;
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
   }
-  
-  footer p{
-      color: #fff;
-      text-align: center;
-      margin-top: 15px;
-      margin-bottom: 10px;
-      font-size: 1.1em;
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
   }
-  
-  footer .wave {
-      
-     
-      position: absolute;
-          bottom: 0;
-          top: -100%; 
-         
-      left: 0;
-          width: 100%;
-          height: 100px;
-          background: url('../IMG/waves.png'); /* Replace 'waves.png' with the actual path to your wave image */
-          background-size: 1000px 100px;
-      }
-  
-  footer .wave#wave1{ 
-      z-index: 1000;
-      opacity: 1;
-      bottom: 0px;
-      animation: animateWave 4s linear infinite;
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
   }
-  
-  footer .wave#wave2{
-      z-index: 999;
-      opacity: 0.5;
-      bottom: 10px;
-      animation: animateWave_02 4s linear infinite;
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
   }
-  
-  footer .wave#wave3{
-      z-index: 1000;
-      opacity: 0.2;
-      bottom: 0px;
-      animation: animateWave_02 4s linear infinite;
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
   }
-  
-  footer .wave#wave4{
-      z-index: 999;
-      opacity: 0.7;
-      bottom: 10px;
-      animation: animateWave_02 4s linear infinite;
-  }
-  
-  
-  
-  
-  @keyframes animateWave{
-      0%
-      { 
-          background-position-x: 1000px;
-      }
-      100%
-      {
-          background-position-x: 50px;
-      }
-  }
-  
-  @keyframes animateWave_02{
-      0%
-      {
-          background-position-x: 0px;
-      }
-      100%
-      {
-          background-position-x: 1000px;
-      }
+  /*Shrinking for mobile*/
+  @media (max-width: 768px) {
+    .waves {
+      height:40px;
+      min-height:40px;
+    }
+    .content {
+      height:30vh;
+    }
+    h1 {
+      font-size:24px;
+    }
   }
