--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,330 @@
-html {
 
-    height: 100%;
+html{
+  height: 100%;
 }
 
+:root {
+  scroll-behavior: smooth;
+  --primary-theme-color: #c8d7da;
+  --secondary-theme-color: #ffffff;
+  --text-color: #000000;
+  --shadow-color: rgba(255, 255, 255, 0.502);
+  --button-color: #ffffff;
+  --button-color-active: #fff;
+  --button-text-color: #000000;
+  --padding-section: 4em 0;
+  --padding-container: 0 2em;
+  --max-width-container: 1024px;
+  --primary-highlight: #61dafb;
+  --secondary-highlight: #ffd700;
+  --border-radius: 1rem;
+  --all-transitions: all 0.25s;
+}
+
+.body {
+  background-color: var(--primary-theme-color);
+  color: var(--text-color);
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+}
+
+.header {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: var(--all-transitions);
+}
+
+.header--scroll {
+  box-shadow: 0 0.125rem 0.125rem 0 var(--secondary-theme-color);
+  background-color: var(--shadow-color);
+}
+
+.header-nav {
+  padding: 1rem 0;
+  transition: var(--all-transitions);
+}
+
+.header-nav--scroll {
+  padding: 0.5rem 0;
+}
+
+.header-nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: var(--max-width-container);
+  margin: auto;
+  padding: var(--padding-container);
+}
+
+.header-nav__logo-container {
+  display: flex;
+  width: 48px;
+  height: 48px;
+}
+
+.header-nav__logo {
+  width: 100%;
+  height: 100%;
+}
+
+.header-nav__menu-icon-container {
+  height: 2rem;
+  cursor: pointer;
+  margin: 0;
+}
+
+.header-nav__menu-icon {
+  fill: var(--text-color);
+  height: 100%;
+}
+
+.header-nav__menu-link-list {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-image: linear-gradient(to top, var(--primary-theme-color), var(--secondary-theme-color));
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  pointer-events: none;
+  transition: var(--all-transitions);
+  list-style: none;
+}
+
+.header-nav__menu-link-list--open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.header-nav__menu-link-item {
+  display: flex;
+}
+
+.header-nav__menu-link {
+  color: var(--text-color);
+  font-weight: 600;
+  padding: 0.25em 1em;
+  border-radius: var(--border-radius);
+  text-decoration: none;
+  transition: var(--all-transitions);
+}
+
+.header-nav__menu-link--active,
+.header-nav__menu-link:hover {
+  background-color: var(--button-color-active);
+  color: var(--button-text-color);
+}
+
+.header-nav__menu-close-icon-container {
+  position: absolute;
+  top: 1.5rem;
+  right: 2rem;
+  height: 2rem;
+  cursor: pointer;
+}
+
+.header-nav__menu-close-icon {
+  fill: var(--text-color);
+  height: 100%;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.hero {
+  position: relative;
+  display: flex;
+  background-image: linear-gradient(var(--primary-theme-color), var(--secondary-theme-color));
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.hero::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 6rem;
+  background-image: linear-gradient(transparent, var(--primary-theme-color));
+  z-index: 10;
+}
+
+.hero__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: var(--max-width-container);
+  margin: auto;
+  padding: var(--padding-container);
+}
+
+.hero__title {
+  font-size: 3rem;
+  white-space: nowrap;
+  z-index: 5;
+  margin: 0 0 0 45%;
+}
+
+.hero__learn-button {
+  position: absolute;
+  z-index: 5;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 75%);
+  background-color: var(--button-color);
+  border-radius: var(--border-radius);
+  color: var(--button-text-color);
+  font-size: 1rem;
+  font-weight: 800;
+  padding: 0.5em 2em;
+  text-decoration: none;
+  transition: background-color 0.25s;
+}
+
+.hero__learn-button:hover,
+.hero__learn-button--active {
+  background-color: var(--button-color-active);
+}
+
+.hero__stars-image-container,
+.hero__moon-image-container,
+.hero__mountains-behind-image-container,
+.hero__mountains-front-image-container {
+  position: absolute;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  pointer-events: none;
+}
+
+.hero__mountains-front-image-container {
+  z-index: 8;
+}
+
+.hero__stars-image,
+.hero__moon-image,
+.hero__mountains-behind-image,
+.hero__mountains-front-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hero__moon-image {
+  mix-blend-mode: screen;
+}
+
+.learning {
+  display: flex;
+  padding: var(--padding-section);
+}
+
+.learning__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  max-width: var(--max-width-container);
+  margin: auto;
+  padding: var(--padding-container);
+}
+
+.learning__title {
+  text-align: center;
+  margin: 0;
+}
+
+.learning__paragraph {
+  text-align: center;
+  margin: 0;
+}
+
+.learning__topics {
+  padding: 2rem 0;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(256px, 1fr))
+}
+
+.learning__topic {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  width: 100%;
+}
+
+.learning__topic-icon-container {
+  width: 3rem;
+}
+
+.learning__topic-icon {
+  width: 100%;
+}
+
+.learning__topic-title {
+  text-align: center;
+  margin: 0;
+}
+
+.learning__topic-paragraph {
+  text-align: center;
+  margin: 0;
+}
+
+@media (min-width: 854px) {
+  :root {
+    --padding-container: 0 0.75em;
+  }
+
+  .header-nav__menu-icon-container,
+  .header-nav__menu-close-icon-container {
+    display: none;
+  }
+
+  .header-nav__menu-link-list {
+    position: static;
+    flex-direction: row;
+    background-image: none;
+    opacity: 1;
+    width: auto;
+    pointer-events: auto;
+  }
+
+  .hero__learn-button {
+    font-size: 1.25rem;
+    top: 52.5%;
+  }
+}
+
+
+
 /* Barra de navegacion */ 
+.navbar-nav.center {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+
 
 #SSS{
 
@@ -39,55 +360,11 @@ html {
 }
 
 
-
-.navbar {
-    padding: 2rem;
-    background-color: white;
-
-}
-
-.navbar-collapse{
-align-items: center;
-justify-content:space-between ;
-font-weight: bold;
-}
-
-.custom-text {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 16px;
-  color: rgb(0, 0, 0); 
-  margin-left: 10px; 
-  margin-bottom: 0; 
-}
-
-/* Estilos personalizados para los enlaces */
-.custom-link {
-  font-family: Arial, Helvetica, sans-serif;
-  color: #000000; 
-  text-decoration: none; 
-}
-
-
-/*adaptable (responsivo)*/
-
-@media screen and (max-width:767px) {
-    .navbar-brand {
-        display: none;
-    }
-}
-
 /*aqui empieza el cuerpo*/
 
 h1{
   font-size: 2.5rem;
   text-align: center;
-}
-
-@media screen and (max-width:480px) {
-    .t {
-        color: #9500ff;
-    }
 }
 
 
@@ -156,162 +433,127 @@ section{
 
 
 body {
-   display: flex;
-   flex-direction: column;
+   
    min-height: 100%;
    background-color: rgb(255, 255, 255); 
 }
 
 
 
+/* Aplica un estilo predeterminado a los contenedores */
+.scroll-hide {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+
 /*FOOTER*/
 
-footer{
 
-  margin-top: auto;
+h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight:300;
+  letter-spacing: 2px;
+  font-size:48px;
+}
+p {
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 1px;
+  font-size:14px;
+  color: #333333;
 }
 
-
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-*
-
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+.header1 {
+  position:relative;
+  text-align:center;
+  background-color: rgba(13,110,253,255);
+  color:white;
+}
+.logo {
+  width:50px;
+  fill:white;
+  padding-right:15px;
+  display:inline-block;
+  vertical-align: middle;
 }
 
-footer{
-
-    position: relative;
-    width: 100%;
-    background: #3586ff;
-    min-height: 100px;
-    padding: 20x 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-
+.inner-header {
+  height:25vh;
+  width:100%;
+  margin: 0;
+  padding: 0;
 }
 
-footer .social_icon,
-footer .menu {
-position: relative;
-display: flex;
-justify-content: center;
-align-items: center;
-margin: 10px 0;
-flex-wrap: wrap;
-
+.flex { /*Flexbox for containers*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-footer .social_icon li,
-footer .menu li {
-    list-style: none;
+.waves {
+  position:relative;
+  width: 100%;
+  height:15vh;
+  margin-bottom:-7px; /*Fix for safari gap*/
+  min-height:100px;
+  max-height:150px;
 }
 
-footer .social_icon li a
- {
-    font-size: 2em;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
+.content {
+  position:relative;
+  height:20vh;
+  text-align:center;
+  background-color: white;
 }
 
-footer .social_icon li a:hover{
-    transform: translateY(-10px);
+.conten p{
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  
 }
 
+/* Animation */
 
-footer .menu li a {
-    font-size: 1.2em;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    text-decoration: none;
-    opacity: 0.75;
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
 }
-footer .menu li a:hover{
-
-    opacity: 1;
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
 }
-
-footer p{
-    color: #fff;
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    font-size: 1.1em;
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
 }
-
-footer .wave {
-    
-   
-    position: absolute;
-        bottom: 0;
-        top: -100%; 
-       
-    left: 0;
-        width: 100%;
-        height: 100px;
-        background: url('../IMG/waves.png'); /* Replace 'waves.png' with the actual path to your wave image */
-        background-size: 1000px 100px;
-    }
-
-footer .wave#wave1{ 
-    z-index: 1000;
-    opacity: 1;
-    bottom: 0px;
-    animation: animateWave 4s linear infinite;
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
 }
-
-footer .wave#wave2{
-    z-index: 999;
-    opacity: 0.5;
-    bottom: 10px;
-    animation: animateWave_02 4s linear infinite;
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
 }
-
-footer .wave#wave3{
-    z-index: 1000;
-    opacity: 0.2;
-    bottom: 0px;
-    animation: animateWave_02 4s linear infinite;
+@keyframes move-forever {
+  0% {
+   transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
 }
-
-footer .wave#wave4{
-    z-index: 999;
-    opacity: 0.7;
-    bottom: 10px;
-    animation: animateWave_02 4s linear infinite;
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height:40px;
+    min-height:40px;
+  }
+  .content {
+    height:30vh;
+  }
+  h1 {
+    font-size:24px;
+  }
 }
-
-
-
-
-@keyframes animateWave{
-    0%
-    { 
-        background-position-x: 1000px;
-    }
-    100%
-    {
-        background-position-x: 50px;
-    }
-}
-
-@keyframes animateWave_02{
-    0%
-    {
-        background-position-x: 0px;
-    }
-    100%
-    {
-        background-position-x: 1000px;
-    }
-}
-
-
