--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@ html{
 
 ::-webkit-scrollbar-thumb{
   border-radius: 3px;
-  background: linear-gradient(45deg,#00ffff,#77ff00); 
+  background: linear-gradient(45deg,#00ffff,#4391f7); 
  }
 
 :root {
