--- a/CSS/Acerca de nosotros.css
+++ b/CSS/Acerca de nosotros.css
@@ -27,6 +27,20 @@
     list-style: none;
 }
 
+.wavess{
+  position: static;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+ 
+}
+
+.ORG{
+  
+  border-radius: 20px;
+  background-color: #111;
+}
+
 .container1_all{
     position: relative;
     right: 0;
@@ -66,9 +80,7 @@
   position: relative;
   width: 50%;
   height: 475px;
-  box-shadow: -15px 0 35px rgba(0, 0, 0, 0.1),
-  0 -15px 35px rgba(0, 0, 0, 0.1),
-  0 15px 35px rgba(0, 0, 0, 0.1);
+  
   transition: .5s;
 }
 
@@ -170,11 +182,11 @@
 
 .shoe{
   position: absolute;
-  width: 140%;
+  width: 100%;
   opacity: 0;
   bottom: 0;
   right: 0;
-  transform: rotate(-20deg);
+ 
   transition: .5s;
 }
 
@@ -390,7 +402,7 @@
 
   .shoe{
       width: 100%;
-      transform: rotate(-5deg) translateY(-50%);
+      transform:  translateY(-50%);
       top: 55%;
       right: 2%;
   }
