--- a/CSS/style.css
+++ b/CSS/style.css
@@ -365,10 +365,10 @@ html{
 
 .unico{
     background-color: #111;
-    padding: 16px 24px;
+    padding:  24px;
     border-radius: 6px;
     transition: .3s;
-    border-radius: 10px 0px 10px 0px;
+    
 }
 
 .unico:hover {
@@ -386,6 +386,23 @@ h1{
 
 .t {
     color: #fff;
+    font-weight: 900;
+    font-size: 45px;
+}
+
+.t12{
+  color: #fff;
+    font-weight: 900;
+    font-size: 45px;
+
+}
+
+.t13{
+  color: #000000;
+  font-weight: 900;
+  font-size: 45px;
+  text-align: center;
+
 }
 
 .texto1 p {
